# pmlogdaemon

./: CMakeLists.txt  README.md  oss-pkg-info.yaml
doc/: Doxyfile.in
files/launch/: PmLogDaemon-ready.conf.in  PmLogDaemon.conf.in  PmLogDaemon.in
files/sysbus/: com.webos.pmlogd.api.json  com.webos.pmlogd.groups.json  com.webos.pmlogd.perm.json  com.webos.pmlogd.role.json.in  com.webos.pmlogd.service.in
scripts/public/: show_disk_usage.sh
src/: config.c  heavy_operation.c  heavy_operation.h  heavy_operation_routine.c  heavy_operation_routine.h  main.c  main.h  print.h  ring.c  ring.h  util.c  worker_routine.c  worker_routine.h
